add contact infomations

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,6 +1,6 @@
 <div class="hero">
   <div class="hero-content">
-    <h1>Welcome to <span>TNT App</span></h1>
+    <h1>Welcome to <span>TNTApp</span></h1>
     <p>Where your ideas come to life with amazing mobile apps.</p>
     <button>Discover Now</button>
   </div>
@@ -20,3 +20,22 @@
     <p>Runs smoothly on Android, iOS, and Web.</p>
   </div>
 </section>
+<footer class="footer">
+  <div class="container">
+    <div class="footer-section">
+      <h3>Contact Us</h3>
+      <ul>
+        <li>
+          <strong>Address:</strong> Thu Duc, Ho Chi Minh City, Vietnam
+        </li>
+        <li>
+          <strong>Email:</strong>
+          <a href="mailto:dreamangels1012&#64;gmail.com"> dreamangels1012&#64;gmail.com</a>
+        </li>
+        <li>
+          <strong>Phone:</strong> <a href="tel:+84931329779"> +84 931 329 779</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
