--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -64,3 +64,40 @@
     }
   }
 }
+
+.footer {
+  background-color: #f5f5f5;
+  padding: 2rem 1rem;
+  color: #333;
+  font-size: 0.95rem;
+
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .footer-section {
+    h3 {
+      margin-bottom: 0.75rem;
+      font-size: 1.2rem;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+
+      li {
+        margin-bottom: 0.5rem;
+
+        a {
+          color: #0066cc;
+          text-decoration: none;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+  }
+}
