remove unused texts

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -9,7 +9,7 @@
           <span class="text-blue-600">That Matter</span>
         </h1>
         <p class="text-lg text-gray-600 mb-8">
-          TNTApp Studio specializes in crafting high-quality mobile and web
+          TNTApp specializes in crafting high-quality mobile and web
           applications that drive business growth and solve real-world problems.
         </p>
         <div
