--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -35,7 +35,7 @@
             <div>
               <h3 class="font-semibold text-gray-800">Email</h3>
               <a
-                href="mailto:hcarevjapp&#64;gmail.com"
+                href="mailto:dreamangels1012&#64;gmail.com"
                 class="text-blue-600 hover:underline"
                 >dreamangels1012&#64;gmail.com</a
               >
