--- a/src/app/pages/privacy/privacy.html
+++ b/src/app/pages/privacy/privacy.html
@@ -295,7 +295,7 @@
           <div class="bg-blue-50 rounded-lg p-4">
             <div class="flex items-center">
               <i class="fas fa-at text-blue-600 mr-3"></i>
-              <span class="font-medium">hcarevjapp&#64;gmail.com</span>
+              <span class="font-medium">dreamangels1012&#64;gmail.com</span>
             </div>
           </div>
         </div>
