--- a/src/app/pages/eula/eula.html
+++ b/src/app/pages/eula/eula.html
@@ -11,24 +11,23 @@
         <div>
           <p class="text-gray-700 leading-relaxed">
             This End-User License Agreement ("EULA") is a legal agreement
-            between you and OrionSpace Studio
+            between you and TNTApp
           </p>
           <p class="text-gray-700 leading-relaxed">
             This EULA agreement governs your acquisition and use of our
-            OrionSpace Studio software ("Software") directly from OrionSpace
-            Studio or indirectly through a OrionSpace Studio authorized reseller
+            TNTApp software ("Software") directly from TNTApp or indirectly through a TNTApp authorized reseller
             or distributor (a "Reseller").
           </p>
           <p class="text-gray-700 leading-relaxed">
             Please read this EULA agreement carefully before completing the
-            installation process and using the OrionSpace Studio software. It
-            provides a license to use the OrionSpace Studio software and
+            installation process and using the TNTApp software. It
+            provides a license to use the TNTApp software and
             contains warranty information and liability disclaimers.
           </p>
           <p class="text-gray-700 leading-relaxed">
-            If you register for a free trial of the OrionSpace Studio software,
+            If you register for a free trial of the TNTApp software,
             this EULA agreement will also govern that trial. By clicking
-            "accept" or installing and/or using the OrionSpace Studio software,
+            "accept" or installing and/or using the TNTApp software,
             you are confirming your acceptance of the Software and agreeing to
             become bound by the terms of this EULA agreement.
           </p>
@@ -42,9 +41,9 @@
           </p>
           <p class="text-gray-700 leading-relaxed">
             This EULA agreement shall apply only to the Software supplied by
-            OrionSpace Studio herewith regardless of whether other software is
+            TNTApp herewith regardless of whether other software is
             referred to or described herein. The terms also apply to any
-            OrionSpace Studio updates, supplements, Internet-based services, and
+            TNTApp updates, supplements, Internet-based services, and
             support services for the Software, unless other terms accompany
             those items on delivery. If so, those terms apply.
           </p>
@@ -59,15 +58,15 @@
         <div>
           <h2 class="text-xl font-semibold mb-4">License Grant</h2>
           <p class="text-gray-700 leading-relaxed">
-            OrionSpace Studio hereby grants you a personal, non-transferable,
-            non-exclusive licence to use the OrionSpace Studio software on your
+            TNTApp hereby grants you a personal, non-transferable,
+            non-exclusive licence to use the TNTApp software on your
             devices in accordance with the terms of this EULA agreement.
           </p>
           <p class="text-gray-700 leading-relaxed">
-            You are permitted to load the OrionSpace Studio software (for
+            You are permitted to load the TNTApp software (for
             example a PC, laptop, mobile or tablet) under your control. You are
             responsible for ensuring your device meets the minimum requirements
-            of the OrionSpace Studio software.
+            of the TNTApp software.
           </p>
           <p class="text-gray-700 leading-relaxed">You are not permitted to:</p>
           <p class="text-gray-700 leading-relaxed">
@@ -90,7 +89,7 @@
             national or international law
           </p>
           <p class="text-gray-700 leading-relaxed">
-            use the Software for any purpose that OrionSpace Studio considers is
+            use the Software for any purpose that TNTApp considers is
             a breach of this EULA agreement
           </p>
         </div>
@@ -105,15 +104,15 @@
             Intellectual Property and Ownership
           </h2>
           <p class="text-gray-700 leading-relaxed mb-4">
-            OrionSpace Studio shall at all times retain ownership of the
+            TNTApp shall at all times retain ownership of the
             Software as originally downloaded by you and all subsequent
             downloads of the Software by you. The Software (and the copyright,
             and other intellectual property rights of whatever nature in the
             Software, including any modifications made thereto) are and shall
-            remain the property of OrionSpace Studio .
+            remain the property of TNTApp .
           </p>
           <p class="text-gray-700 leading-relaxed mb-4">
-            OrionSpace Studio reserves the right to grant licences to use the
+            TNTApp reserves the right to grant licences to use the
             Software to third parties.
           </p>
         </div>
@@ -128,7 +127,7 @@
           <p class="text-gray-700 leading-relaxed">
             This EULA agreement is effective from the date you first use the
             Software and shall continue until terminated. You may terminate it
-            at any time upon written notice to OrionSpace Studio .
+            at any time upon written notice to TNTApp .
           </p>
           <p class="text-gray-700 leading-relaxed">
             It will also terminate immediately if you fail to comply with any
